--- a/po/nl.po
+++ b/po/nl.po
@@ -12877,7 +12877,7 @@ msgstr "Het bestand '{0}' kon niet geopend of ontleed worden."
 #: src/merge/output_control.cpp:1642
 #, fuzzy, no-c-format, c++-format
 msgid "The file '{0}' could not be renamed to '{1}'.\n"
-msgstr "Het bestand '{0}' kon voor lezen niet geopend worden: ({1}).\n"
+msgstr "Het bestand '{0}' kon niet hernoemnd worden: ({1}).\n"
 
 #: src/merge/output_control.cpp:1422
 #, no-c-format, c++-format
@@ -12897,7 +12897,7 @@ msgstr "Het bestand '{0}' is geen Matroska-bestand of kan niet worden gevonden.\
 #: src/merge/output_control.cpp:1640
 #, fuzzy, no-c-format, c++-format
 msgid "The file '{0}' was renamed to '{1}'.\n"
-msgstr "Het bestand '{0}' kon voor lezen niet geopend worden: ({1}).\n"
+msgstr "Het bestand '{0}' was hernoemd naar ({1}).\n"
 
 #: src/extract/xtr_wav.cpp:137
 #, no-c-format, c++-format
@@ -12942,7 +12942,7 @@ msgstr "Het bestand kon voor schrijven niet geopend worden."
 #: src/extract/cues.cpp:50
 #, no-c-format, c++-format
 msgid "The file does not contain track ID {0}.\n"
-msgstr "Het i bestand bevat geen spoor ID {0}.\n"
+msgstr "Het bestand bevat geen spoor ID {0}.\n"
 
 #: src/mkvtoolnix-gui/chapter_editor/tab.cpp:751
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:288
@@ -13012,7 +13012,7 @@ msgstr "Het bestand wordt gerepareerd, deel 4/4..."
 #: src/propedit/tag_target.cpp:348
 #, no-c-format
 msgid "The file is read in order to create track statistics.\n"
-msgstr "Het bestand is gelezen om spoor statistieken aan te maken.\n"
+msgstr "Het bestand is ingelezen om spoor statistieken aan te maken.\n"
 
 #: src/common/property_element.cpp:122
 #, no-c-format
@@ -13101,12 +13101,12 @@ msgstr "Het eerste bestand kan niet worden bijgevoegd omdat er geen bestand is o
 #: src/extract/extract_cli_parser.cpp:77
 #, no-c-format
 msgid "The first mode extracts some tracks to external files."
-msgstr "De eerste mode extraheert sommige sporen naar een externe bestanden."
+msgstr "De eerste mode extraheert sommige sporen naar externe bestanden."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:233
 #, no-c-format
 msgid "The following modes are supported:"
-msgstr "Het volgende modussen zijn ondersteund"
+msgstr "Het volgende modi zijn ondersteund:"
 
 #: src/mkvtoolnix-gui/merge/mux_config.cpp:278
 #, no-c-format
@@ -13121,7 +13121,7 @@ msgstr "Het volgende programma kon niet gestart worden: %1"
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:341
 #, no-c-format
 msgid "The format defaults to %H:%M:%S if none is given."
-msgstr "het format standaard naar %H:%M:%S als niets is ingeven."
+msgstr "Als er geen notatie is opgegeven, wordt standaard %H:%M:%S gebruikt."
 
 #: src/mkvtoolnix-gui/chapter_editor/generate_sub_chapters_parameters_dialog.cpp:67
 #: src/mkvtoolnix-gui/chapter_editor/mass_modification_dialog.cpp:67
@@ -13131,12 +13131,12 @@ msgstr "het format standaard naar %H:%M:%S als niets is ingeven."
 #: src/mkvtoolnix-gui/merge/output.cpp:302
 #, no-c-format
 msgid "The format is either the form 'HH:MM:SS.nnnnnnnnn' or a number followed by one of the units 's', 'ms' or 'us'."
-msgstr "De tijd codes kunnen worden ingegeven in de vorm HH:MM:SS.nnnnnnnnn of een aantal gevolgd door de units 's', 'ms' of 'us'"
+msgstr "De tijd codes kunnen worden ingegeven in de vorm 'HH:MM:SS.nnnnnnnnn' of een getal gevolgd door de units 's', 'ms' of 'us'."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:429
 #, no-c-format
 msgid "The format used by GoPro cameras for chaptered video files is recognized as well."
-msgstr ""
+msgstr "Het formaat dat GoPro-camera's gebruiken voor hoofdstukgewijze videobestanden wordt ook herkend."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:293
 #, no-c-format
@@ -13176,7 +13176,7 @@ msgstr "De hoogte van de twee sporen verschillen: {0} en {1}"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:446
 #, no-c-format
 msgid "The horizontal layout with two fixed columns results in a wider window while the vertical tab widget layout results in a higher window."
-msgstr "De horizontale indeling met twee vaste kolommen resulteert in een breder venster terwijl de verticale tab widget indeling resulteert in een hogere venster."
+msgstr "De horizontale indeling met twee vaste kolommen resulteert in een breder venster terwijl de verticale tab widget indeling resulteert in een hoger venster."
 
 #: src/mkvtoolnix-gui/merge/tool.cpp:365
 #, no-c-format
@@ -13186,12 +13186,12 @@ msgstr "De taak is toegevoegd aan de taak wachtrij."
 #: src/mkvtoolnix-gui/jobs/program_runner/linux_program_runner.cpp:100
 #, no-c-format
 msgid "The job queue has finished processing."
-msgstr ""
+msgstr "De taakwachtrij is verwerkt."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
 #, fuzzy, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "Het bereikpercentage van sonde '{0}' is ongeldig.\n"
+msgstr "De taal '%1' is verouderd."
 
 #: src/input/r_usf.cpp:106
 #, no-c-format, c++-format
@@ -13201,12 +13201,12 @@ msgstr "De taal code '{0}' is geen geldig ISO 639-2 taal code en zal genegeerd w
 #: src/mkvtoolnix-gui/merge/output.cpp:236
 #, no-c-format
 msgid "The language for the newly created chapters is set via the chapter language control above."
-msgstr "De taal voor nieuw aangemaakte hoofdstukken wordt ingesteld via de hoofdstuk taal hulp hierboven."
+msgstr "De taal voor de nieuw aangemaakte hoofdstukken wordt ingesteld via de hoofdstuktaalinstelling hierboven."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:554
 #, no-c-format
 msgid "The language for this track that players can use for automatic track selection and display for the user."
-msgstr "De taal voor dit spoor die af spelers kunnen gebruiken voor de automatische spoor selectie en tonen aan de gebruiker."
+msgstr "De taal voor dit spoor die spelers kunnen gebruiken voor de automatische spoor selectie en tonen aan de gebruiker."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:510
 #, no-c-format
@@ -13231,12 +13231,12 @@ msgstr "De hier ingestelde taal wordt ook gebruikt als hoofdstukken worden aange
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:521
 #, fuzzy, no-c-format
 msgid "The language tag is not valid."
-msgstr "Een lege bestandsnaam is niet geldig.\n"
+msgstr "De taaltag is niet geldig."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:521
 #, fuzzy, no-c-format
 msgid "The language tag is valid."
-msgstr "Het bereikpercentage van sonde '{0}' is ongeldig.\n"
+msgstr "De taaltag is geldig."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:612
 #, no-c-format
@@ -13261,12 +13261,12 @@ msgstr "De letters 'G', 'M' en 'K' kunnen gebruikt worden om respectievelijk gig
 #: src/merge/timestamp_factory.cpp:218
 #, no-c-format, c++-format
 msgid "The line {0} of the timestamp file '{1}' does not contain a valid floating point number.\n"
-msgstr "De regel {0} van het tijd code bestand '{1}' bevat geen geldig veranderbaar nummer.\n"
+msgstr "De regel {0} van het tijd code bestand '{1}' bevat geen geldig drijvende-kommagetal.\n"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1509
 #, fuzzy, no-c-format
 msgid "The list of boundary characters for deriving the track language from file names must not be empty."
-msgstr "De lijst met herkende spoortalen in bestandsnamen mag niet leeg zijn."
+msgstr "De lijst met grenstekens voor het afleiden van de tracktaal uit bestandsnamen mag niet leeg zijn."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1521
 #, no-c-format
@@ -13276,7 +13276,7 @@ msgstr "De lijst met herkende spoortalen in bestandsnamen mag niet leeg zijn."
 #: src/common/translation.cpp:415
 #, no-c-format
 msgid "The locale could not be set properly. Check the LANG, LC_ALL and LC_MESSAGES environment variables.\n"
-msgstr "De locatie kon niet juist ingesteld worden. Controleer de taal, LC_ALL and LC_MESSAGES omgeving variabelen.\n"
+msgstr "De locatie kon niet juist ingesteld worden. Controleer de LTANG, LC_ALL en LC_MESSAGES omgevingsvariabelen.\n"
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:38
 #, no-c-format
