--- a/po/nl.po
+++ b/po/nl.po
@@ -13878,7 +13878,7 @@ msgstr "De waarde kan ingegeven worden als een drijvende-kommagetal (b.v. 12.345
 #: src/mkvtoolnix-gui/merge/input.cpp:580
 #, no-c-format
 msgid "The value can be negative, but keep in mind that any frame whose timestamp is negative after this calculation is dropped."
-msgstr "De waarde kan negatief zijn, maar onthoudt dat enig beeld met deze waarde (negatief) na berekening wordt weggelaten."
+msgstr "De waarde kan negatief zijn, maar onthoudt dat elk beeld met deze waarde (negatief) na berekening wordt weggelaten."
 
 #: src/common/bcp47.cpp:520
 #, no-c-format
@@ -13888,12 +13888,12 @@ msgstr "De waarde voldoet niet aan de algemene structuur van de taaltags van IET
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1556
 #, no-c-format
 msgid "The value for deriving the 'forced display' flag for subtitles from file names must be a valid regular expression."
-msgstr ""
+msgstr "De waarde voor het afleiden van de 'forced display'-vlag voor ondertitels uit bestandsnamen moet een geldige reguliere expressie zijn."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1540
 #, no-c-format
 msgid "The value for deriving the 'hearing impaired' flag from file names must be a valid regular expression."
-msgstr ""
+msgstr "De waarde voor het afleiden van de vlag 'slechthorend' uit bestandsnamen moet een geldige reguliere expressie zijn."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:622
 #, no-c-format
@@ -13909,17 +13909,17 @@ msgstr "De waarden zijn beschikbaar voor eenvoudige selectie in de samenvoeger."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:472
 #, fuzzy, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "Het bestand '%1' bestaat al."
+msgstr "De variant '%1' is verouderd."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
-msgstr ""
+msgstr "De variant '%1' wordt gebruikt met prefixen die er niet geschikt voor zijn. Geschikte prefixen zijn: %2."
 
 #: src/common/bcp47.cpp:460
 #, no-c-format, c++-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "De variant '{}' komt meer dan één keer voor."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:778
 #, no-c-format
@@ -13944,7 +13944,7 @@ msgstr "Theora"
 #: src/merge/mkvmerge.cpp:3141
 #, fuzzy, no-c-format
 msgid "There are no chapters in source files & chapter files."
-msgstr "Slechts {0} hoofdstuk gevonden in bron en hoofdstuk bestanden."
+msgstr "Er zijn geen hoofdstukken in de bronbestanden en hoofdstukbestanden."
 
 #: src/extract/cues.cpp:54
 #, no-c-format, c++-format
@@ -13980,7 +13980,7 @@ msgstr "Geen vertaling beschikbaar voor '{0}'.\n"
 #: src/mkvtoolnix-gui/main_window/available_update_info_dialog.cpp:94
 #, no-c-format
 msgid "There was an error querying the update status."
-msgstr "Er was een fout bij opvragen van de opwaardeer status."
+msgstr "Er was een fout bij opvragen van de updatestatus."
 
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:714
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:716
@@ -14026,32 +14026,32 @@ msgstr "Dit AC-3 spoor bevat {0} bytes aan niet-AC-3 data aan het begin. Wat lei
 #: src/output/p_xyzvc_es.cpp:143
 #, no-c-format, c++-format
 msgid "This AVC/H.264 track does not start with a key frame. The first {0} frames have been skipped.\n"
-msgstr "Dit AVC/H.264 spoor start niet met het sleutel beeld. Het eerste {0} beeld is overgeslagen.\n"
+msgstr "Dit AVC/H.264 spoor start niet met het sleutel beeld. De eerste {0} beelden zijn overgeslagen.\n"
 
 #: src/output/p_avc_es.cpp:44
 #, no-c-format
 msgid "This AVC/H.264 track's timing information indicates that it uses a variable frame rate. However, no default duration nor an external timestamp file has been provided for it, nor does the source container provide timestamps. The resulting timestamps may not be useful.\n"
-msgstr "Dit AVC/H.264 spoor tijd informatie geeft aan, dat er een variabele beeld duur is gebruikt. Hoewel er geen standaard duur noch een externe tijdcode voor het bestand is voorzien en de bron inhoud ook niet voorziet in tijd codes. Kunnen de resulterende tijdcodes mogelijk niet effectief zijn.\n"
+msgstr "De timinginformatie van dit AVC/H.264-spoor geeft aan dat het een variabele framesnelheid gebruikt. Er is echter geen standaardduur of extern tijdstempelbestand voor geleverd, en de broncontainer levert ook geen tijdstempels. De resulterende tijdstempels zijn mogelijk niet nuttig.\n"
 
 #: src/output/p_mp3.cpp:57
 #, no-c-format, c++-format
 msgid "This MPEG audio track contains {0} bytes of non-MP3 data at the beginning. This corresponds to a delay of {1}ms. This delay will be used instead of the garbage data.\n"
-msgstr "Dit MPEG audio spoor bevat {0} bytes aan niet-MP3 data aan het begin. Wat leidt tot een vertraging van {1}ms. Deze vertraging wordt gebruikt i.p.v. de 'rotzooi' data.\n"
+msgstr "Dit MPEG audio spoor bevat {0} bytes aan niet-MP3 data aan het begin. Dit leidt tot een vertraging van {1}ms. Deze vertraging wordt gebruikt i.p.v. de 'rotzooi' data.\n"
 
 #: src/input/r_ogm.cpp:840
 #, no-c-format
 msgid "This Ogg/OGM file contains chapter or title information. Unfortunately the charset used to store this information in the file cannot be identified unambiguously. The program assumes that your system's current charset is appropriate. This can be overridden with the '--chapter-charset <charset>' switch.\n"
-msgstr "Dit Ogg/OGM bestand bevat hoofdstuk of titel informatie. Helaas kan de karakterset om de informatie in het bestand op te slaan, niet ondubbelzinnig herkend worden. Het programma neemt aan dat jouw huidige systeem karakter set de juiste is. Dit kan overschreven worden met, hoofdstuk-karakter set, '--chapter-charset <charset>' instelling.\n"
+msgstr "Dit Ogg/OGM bestand bevat hoofdstuk of titel informatie. Helaas kan de karakterset om de informatie in het bestand op te slaan, niet ondubbelzinnig herkend worden. Het programma neemt aan dat jouw huidige systeem karakter set de juiste is. Dit kan overschreven worden met de, hoofdstuk-karakter set, '--chapter-charset <charset>' instelling.\n"
 
 #: src/input/r_ogm.cpp:847
 #, no-c-format
 msgid "This Ogg/OGM file contains chapters but they could not be parsed. This can be due to the character set not being set properly for them or due to the entries not matching the expected SRT-style format.\n"
-msgstr "Dit Ogg/OGM bestand bevat hoofdstukken, maar deze konden niet worden ontleed. Dit kan te wijten zijn, doordat de karakterset niet juist voor hen is ingesteld of doordat de vermeldingen niet overeenkomen met de verwachte SRT-stijl karakter formaat.\n"
+msgstr "Dit Ogg/OGM-bestand bevat hoofdstukken, maar deze konden niet worden geparseerd. Dit kan komen doordat de tekenset niet goed is ingesteld of doordat de vermeldingen niet overeenkomen met de verwachte SRT-stijlopmaak.\n"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:303
 #, no-c-format
 msgid "This affects functions such as the selector of recently used destination directories in the multiplexer."
-msgstr ""
+msgstr "Dit heeft invloed op functies zoals de selector van recent gebruikte doelmappen in de multiplexer."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:409
 #, no-c-format
@@ -14064,7 +14064,7 @@ msgstr "Deze hoeveelheid is 0,3% van de bronbestand grootte of 10 MB, afhankelij
 msgid "This audio track contains {0} byte of invalid data which was skipped before timestamp {1}."
 msgid_plural "This audio track contains {0} bytes of invalid data which were skipped before timestamp {1}."
 msgstr[0] "Dit audiospoor bevat {0} byte ongeldige data welke is overgeslagen voor tijdcode {1}."
-msgstr[1] "Deze audiosporen bevatten {0} byte ongeldige data welke is overgeslagen voor tijdcode {1}."
+msgstr[1] "Deze audiosporen bevatten {0} bytes ongeldige data welke is overgeslagen voor tijdcode {1}."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:50
 #, no-c-format
@@ -14079,13 +14079,13 @@ msgstr "Dit veroorzaakt een grotere overhead maar maakt nauwkeurig zoeken en uit
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:1578
 #, no-c-format
 msgid "This configuration is currently invalid."
-msgstr "Deze configuratie is momenteeel ongeldig."
+msgstr "Deze configuratie is momenteel ongeldig."
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:185
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:187
 #, no-c-format
 msgid "This element is currently present in the file."
-msgstr "Dit element is aanwezig in het huidige bestand."
+msgstr "Dit element is aanwezig in het bestand."
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:196
 #, no-c-format
@@ -14131,7 +14131,7 @@ msgstr "Dit is nog niet geïmplementeerd."
 #: src/mkvtoolnix-gui/merge/output.cpp:197
 #, no-c-format
 msgid "This is a comma-separated list of 128-bit segment UIDs in the usual UID form: hex numbers with or without the \"0x\" prefix, with or without spaces, exactly 32 digits."
-msgstr " Dit is een komma gescheiden lijst van 128-bit segment UID in het gebruikelijke UID vorm: hex nummers met of zonder het \"0x\" voorzetsel, met of zonder spatie, exact 32 cijfers."
+msgstr "Dit is een komma gescheiden lijst van 128-bit segment UID in het gebruikelijke UID vorm: hex nummers met of zonder het \"0x\" voorzetsel, met of zonder spatie, exact 32 cijfers."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:314
 #, no-c-format
@@ -14146,7 +14146,7 @@ msgstr "Dit is een willekeurige naam die de grafische gebruikersinterface kan ge
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:556
 #, no-c-format
 msgid "This is considered to be the case when a playlist contains the same item at least five times."
-msgstr ""
+msgstr "Dit is het geval wanneer een afspeellijst hetzelfde item minimaal vijf keer bevat."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:308
 #, no-c-format
@@ -14166,12 +14166,12 @@ msgstr "Dit is de standaard mode."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:356
 #, no-c-format
 msgid "This is the language that newly added chapter names get assigned automatically."
-msgstr "Dit is de taal, dat het onlangs toegevoegde hoofdstuk namen automatisch krijgt toegewezen."
+msgstr "Dit is de taal waarin automatisch nieuwe hoofdstuknamen worden toegewezen."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:180
 #, no-c-format
 msgid "This is the title that players may show as the 'main title' for this movie."
-msgstr "Dit is de titel die af spelers zouden kunnen tonen als 'hoofd titel' voor deze film."
+msgstr "Dit is de titel die spelers zouden kunnen tonen als 'hoofd titel' voor deze film."
 
 #: src/common/hacks.cpp:47
 #, no-c-format
@@ -14186,7 +14186,7 @@ msgstr "Dit is handig voor Blu-ray schijven waarin in dezelfde map een veelheid 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:495
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "Deze taaltag is een 'grandfathered' element dat alleen om historische redenen wordt ondersteund."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
