--- a/po/nl.po
+++ b/po/nl.po
@@ -14207,7 +14207,7 @@ msgstr "Deze modus dwingt diverse beperkingen af."
 #: src/extract/extract_cli_parser.cpp:133
 #, no-c-format
 msgid "This mode extracts cue information for some tracks to external text files."
-msgstr "Deze mode extraheert CUE informatie voor sommige sporen naar extern tekst bestanden."
+msgstr "Deze mode extraheert CUE informatie voor sommige sporen naar externe tekst bestanden."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:343
 #, no-c-format
@@ -14217,17 +14217,17 @@ msgstr "Deze modus houdt alleen rekening met de bovenste niveau van de hoofdstuk
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:330
 #, no-c-format
 msgid "This mostly affects TrueType fonts for which the legacy MIME type ('application/x-truetype-font') might be more widely supported than the standard MIME types ('font/sfnt' and 'font/ttf')."
-msgstr ""
+msgstr "Dit geldt vooral voor TrueType-lettertypen, waarbij het oudere MIME-type ('application/x-truetype-font') mogelijk breder wordt ondersteund dan de standaard MIME-typen ('font/sfnt' en 'font/ttf')."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:620
 #, no-c-format
 msgid "This must be a comma-separated list of four numbers for the cropping to be used at the left, top, right and bottom, e.g. '0,20,0,20'."
-msgstr "Dit moet door komma's gescheiden lijst van vier nummers voor het uitsnijden zijn op links, boven, rechts en onder, zoals zijn '0,20,0,20'."
+msgstr "Dit moet door komma's gescheiden lijst van vier nummers voor het uitsnijden zijn op links, boven, rechts en onder, bijvoorbeeld '0,20,0,20'."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:421
 #, no-c-format
 msgid "This only determines the initial order which can still be changed manually later."
-msgstr ""
+msgstr "Hiermee wordt alleen de beginvolgorde bepaald, die later handmatig nog gewijzigd kan worden."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:640
 #, no-c-format
@@ -14248,7 +14248,7 @@ msgstr "Dit sjabloon wordt gebruikt voor nieuwe hoofdstuk ingangen."
 #: src/common/hacks.cpp:51
 #, no-c-format
 msgid "This option causes mkvmerge to remove the aspect ratio information from the bitstream."
-msgstr "Deze optie zorgt ervoor, dat mkvmerge de beeldverhouding informatie uit de bitstream verwijdert."
+msgstr "Deze optie zorgt ervoor dat mkvmerge de beeldverhouding informatie uit de bitstream verwijdert."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:221
 #, no-c-format
@@ -14258,7 +14258,7 @@ msgstr "Deze optie bepaalt hoe de hoofdstuk namen worden aangemaakt."
 #: src/common/hacks.cpp:44
 #, no-c-format
 msgid "This option does nothing and is only kept for backwards compatibility."
-msgstr ""
+msgstr "Deze optie doet niets en wordt alleen behouden voor achterwaartse compatibiliteit."
 
 #: src/common/hacks.cpp:63
 #, no-c-format
@@ -14288,7 +14288,7 @@ msgstr "Deze optie vertelt mkvmerge de scherm beeldverhouding te gebruiken wanne
 #: src/mkvtoolnix-gui/merge/input.cpp:615
 #, no-c-format
 msgid "This parameter is the display height in pixels."
-msgstr "Deze parameter is het beeldscherm hoogte in pixels."
+msgstr "Deze parameter is de beeldschermhoogte in pixels."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:610
 #, no-c-format
@@ -14298,7 +14298,7 @@ msgstr "Deze parameter is de beeldscherm breedte in pixels."
 #: src/propedit/change.cpp:342
 #, no-c-format, c++-format
 msgid "This property is mandatory and cannot be deleted in '{0}'. {1}\n"
-msgstr "Dit eigendom is verplicht en kan niet worden verwijderd in '{0}'. {1}\n"
+msgstr "Deze eigenschap is verplicht en kan niet worden verwijderd in '{0}'. {1}\n"
 
 #: src/propedit/change.cpp:298
 #, no-c-format, c++-format
@@ -14308,7 +14308,7 @@ msgstr "Dit eigendom is uniek. Meer zaken kunnen niet toegevoegd worden in '{0}'
 #: src/merge/output_control.cpp:1795
 #, no-c-format, c++-format
 msgid "This should REALLY not have happened. The space reserved for the first meta seek element was too small. Size needed: {0}. {1}\n"
-msgstr "Dit zou ECHT niet mogen gebeuren. De gereserveerde ruimte voor het eerste meta zoek element is te klein. Heb nodig: {0}. {1}\n"
+msgstr "Dit zou ECHT niet mogen gebeuren. De gereserveerde ruimte voor het eerste meta zoek element is te klein. Grootte nodig: {0}. {1}\n"
 
 #: src/merge/output_control.cpp:282
 #, no-c-format, c++-format
@@ -14343,17 +14343,17 @@ msgstr "Dit spoor bevat SBR AAC/HE-AAC/AAC+ data."
 #: src/input/r_matroska.cpp:2500
 #, no-c-format
 msgid "This usually indicates a damaged file structure."
-msgstr "Dit duidt meestal op een beschadigd bestand structuur."
+msgstr "Meestal duidt dit op een beschadigde bestandsstructuur."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:46
 #, no-c-format
 msgid "This will increase file size and does not offer any additional value for players at the moment."
-msgstr "Dit zal de bestandsgrootte vergroten en geeft geen extra waarde aan af spelers van dit moment."
+msgstr "Dit zal de bestandsgrootte vergroten en biedt op dit moment geen extra waarde voor spelers."
 
 #: src/mkvtoolnix-gui/merge/additional_command_line_options_dialog.cpp:43
 #, no-c-format
 msgid "This will increase the file's size, especially if there are many audio tracks."
-msgstr "Dit vergroot de bestandsgrootte. Zeker bij meerdere audio sporen."
+msgstr "Dit vergroot de bestandsgrootte, zeker bij meerdere audio sporen."
 
 #: src/mkvtoolnix-gui/merge/input.cpp:587
 #, no-c-format
@@ -14394,7 +14394,7 @@ msgstr "Tijd code schaal"
 #: src/merge/cluster_helper.cpp:227
 #, no-c-format, c++-format
 msgid "Timestamp used in split decision: {0}\n"
-msgstr ""
+msgstr "Tijdstempel gebruikt in split decision: {0}\n"
 
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2196
 #: src/mkvtoolnix-gui/forms/merge/tab.h:2219
@@ -14424,42 +14424,42 @@ msgstr "Naar alle doel bestanden"
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:111
 #, fuzzy, no-c-format
 msgid "Toggle \"&commentary\" flag"
-msgstr "\"Forceer spoor\":"
+msgstr "Schakel de vlag \"&commentaar\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:108
 #, fuzzy, no-c-format
 msgid "Toggle \"&default track\" flag"
-msgstr "\"Standaard spoor\":"
+msgstr "Schakel de vlag \"&standaard track\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:109
 #, fuzzy, no-c-format
 msgid "Toggle \"&forced display\" flag"
-msgstr "'forced display' geforceerde scherm, markering"
+msgstr "Schakel de vlag \"&geforceerde weergave\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:112
 #, fuzzy, no-c-format
 msgid "Toggle \"&hearing impaired\" flag"
-msgstr "\"Slechtzienden\" markering"
+msgstr "Schakel de vlag \"&slechthorenden\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:110
 #, fuzzy, no-c-format
 msgid "Toggle \"&original\" flag"
-msgstr "Originele waarde:"
+msgstr "Schakel de vlag \"&original\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:114
 #, fuzzy, no-c-format
 msgid "Toggle \"&text descriptions\" flag"
-msgstr "Bestand beschrijving"
+msgstr "Schakel de vlag \"&tekstbeschrijvingen\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:113
 #, fuzzy, no-c-format
 msgid "Toggle \"&visual impaired\" flag"
-msgstr "\"Slechtzienden\" markering"
+msgstr "Schakel de vlag \"&visueel gehandicapt\" in"
 
 #: src/mkvtoolnix-gui/util/modify_tracks_submenu.cpp:107
 #, fuzzy, no-c-format
 msgid "Toggle \"track &enabled\" flag"
-msgstr "'Track enabled' Spoor aan, markering"
+msgstr "Schakel de vlag \"track ing&eschakeld\" in"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:971
 #, no-c-format
@@ -14479,7 +14479,7 @@ msgstr "Spoor"
 #: src/mkvtoolnix-gui/forms/main_window/prefs_language_shortcut_dialog.h:115
 #, fuzzy, no-c-format
 msgid "Track &name (optional):"
-msgstr "Spoo&r naam:"
+msgstr "Spoo&r naam (optioneel):"
 
 #: src/mkvtoolnix-gui/forms/header_editor/track_type_page.h:306
 #: src/mkvtoolnix-gui/header_editor/track_type_page.cpp:74
@@ -14520,7 +14520,7 @@ msgstr "Spoor beginblokken"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2264
 #, fuzzy, no-c-format
 msgid "Track name"
-msgstr "Spoo&r naam:"
+msgstr "Spoor naam:"
 
 #: src/common/kax_element_names.cpp:193
 #: src/common/property_element.cpp:133
@@ -14537,7 +14537,7 @@ msgstr "Spoornummer voor mkvpropedit:"
 #: src/common/content_decoder.cpp:68
 #, no-c-format, c++-format
 msgid "Track number {0} has been encrypted and decryption has not yet been implemented.\n"
-msgstr "Spoor nummer {0} is versleuteld en de coderen is nog niet ingebouwd.\n"
+msgstr "Spoor nummer {0} is versleuteld en decoderen is nog niet geïmplementeerd.\n"
 
 #: src/mkvtoolnix-gui/info/element_highlighter.cpp:163
 #, no-c-format
@@ -14570,7 +14570,7 @@ msgstr "Spoor {0} is gecomprimeerd met een onbekend/niet ondersteund compressie 
 #: src/input/r_matroska.cpp:1398
 #, no-c-format, c++-format
 msgid "Track {0} is missing its track UID element which is required to be present by the Matroska specification. If the file contains tags then those tags might be broken.\n"
-msgstr "Spoor {0} mist zijn spoor UID element dat aanwezig dien te zijn conform de Matroska-specificatie. Als het bestand markeringen bevat dan kunnen die markeringen defect zijn.\n"
+msgstr "Spoor {0} mist zijn spoor UID element dat aanwezig dient te zijn conform de Matroska-specificatie. Als het bestand markeringen bevat dan kunnen die markeringen defect zijn.\n"
 
 #: src/common/content_decoder.cpp:85
 #, no-c-format, c++-format
@@ -14580,17 +14580,17 @@ msgstr "Spoor {0} is gecomprimeerd met het algoritme '{1}' dat niet meer wordt o
 #: src/extract/xtr_aac.cpp:52
 #, no-c-format, c++-format
 msgid "Track {0} with the CodecID '{1}' contains invalid \"codec private\" data for AAC.\n"
-msgstr "Spoor {0} met het CodecID '{1}' bevat een ongeldig \"codec private\" data voor AAC.\n"
+msgstr "Spoor {0} met het CodecID '{1}' bevat ongeldige \"codec private\" data voor AAC.\n"
 
 #: src/extract/xtr_ogg.cpp:97
 #, no-c-format, c++-format
 msgid "Track {0} with the CodecID '{1}' does not contain valid headers.\n"
-msgstr "Spoor{0} met de CodecID '{1}' bevat geen geldige beginblokken.\n"
+msgstr "Spoor {0} met de CodecID '{1}' bevat geen geldige beginblokken.\n"
 
 #: src/extract/xtr_wav.cpp:51
 #, no-c-format, c++-format
 msgid "Track {0} with the CodecID '{1}' is missing the \"bits per second (bps)\" element and cannot be extracted.\n"
-msgstr "Spoor {0} met het CodecID '{1}' ontbreken de \"bits per seconde (bps)\" element en kan niet uitgepakt worden.\n"
+msgstr "Track {0} met het CodecID '{1}' mist het element \"bits per seconde (bps)\" en kan niet worden uitgepakt.\n"
 
 #: src/extract/xtr_aac.cpp:45
 #: src/extract/xtr_alac.cpp:49
@@ -14617,7 +14617,7 @@ msgstr "Spoor {0} met het CodecID '{1}' ontbreekt de \"default duration\" elemen
 #: src/extract/xtr_textsubs.cpp:366
 #, no-c-format, c++-format
 msgid "Track {0}: An USF subtitle entry starting at timestamp {1} is not well-formed XML and will be skipped.\n"
-msgstr "Spoor {0}: Een USF ondertitel ingang startend met op tijd code {1} is een niet juist geformeerde XML en wordt overgeslagen.\n"
+msgstr "Spoor {0}: Een USF ondertitel ingang startend op tijd code {1} is een niet juist geformeerde XML en wordt overgeslagen.\n"
 
 #: src/extract/xtr_avc.cpp:44
 #: src/extract/xtr_hevc.cpp:97
