--- a/po/fr.po
+++ b/po/fr.po
@@ -4542,7 +4542,7 @@ msgstr "Conduit mkvmerge à ajouter des commandes d'arrêt aux paquets de sous-t
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Indique à mkvmerge d'utiliser les ID de codec A_AC3/BSID9 et A_AC3/BSID10 au lieu de A_AC3 pour les pistes AC-3 avec des BSIDs de 9 ou 10 comme c'était le cas avec les anciennes versions de mkvmerge."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
