--- a/po/it.po
+++ b/po/it.po
@@ -4553,7 +4553,7 @@ msgstr "A causa dell'aggiunta del comando 'stop display' di mkvmerge al pacchett
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Fa sì che mkvmerge usi per le tracce AC-3 con BSID di 9 o 10  gli ID codec A_AC3/BSID9 e A_AC3/BSID10 invece di A_AC3 come facevano le versioni precedenti di mkvmerge."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
@@ -10295,7 +10295,7 @@ msgstr "Le possibili ragioni sono: il file non è un file Matroska, il file è p
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "File segnalibri PotPlayer"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
