program translations: update Norwegian Bokmål

--- a/po/nb.po
+++ b/po/nb.po
@@ -4527,7 +4527,7 @@ msgstr "Får mkvmerge til å legge til 'stopp visning'-kommandoer til VobSub-und
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Får mkvmerge til å bruke kodek-ID-ene A_AC3/BSID9 og A_AC3/BSID10 i stedet for A_AC3 for AC-3-spor med BSID-er på 9 eller 10 som eldre versjoner av mkvmerge gjorde."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
