--- a/po/ru.po
+++ b/po/ru.po
@@ -4295,7 +4295,7 @@ msgstr "Указывает mkvmerge добавить команды \"остан
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Заставляет mkvmerge использовать идентификаторы кодеков A_AC3/BSID9 и A_AC3/BSID10 вместо A_AC3 для дорожек AC-3 с BSID 9 или 10, как это было в старых версиях mkvmerge."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
