program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -4517,7 +4517,7 @@ msgstr "mkvmerge'ün süre alanı içermeyen VobSub altyazı paketlerine 'stop d
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Mkvmerge'ün eski mkvmerge sürümlerinde olduğu gibi 9 veya 10 BSID'li AC-3 izleri için A_AC3 yerine A_AC3/BSID9 ve A_AC3/BSID10 kodek ID'lerini kullanmasına neden olur."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
