translations: fix syntax errors

--- a/doc/man/po4a/po/uk.po
+++ b/doc/man/po4a/po/uk.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 4.4.0\n"
 "POT-Creation-Date: 2024-10-19 15:11+0200\n"
-"PO-Revision-Date: 2016-02-03 20:53+0000\n"
+"PO-Revision-Date: 2024-11-14 19:52+0100\n"
 "Last-Translator: Oleh Hishak, 2024\n"
 "Language-Team: Ukrainian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/uk/)\n"
 "Language: uk\n"
@@ -1773,7 +1773,7 @@ msgstr "Існує кілька змінних, які можна викорис
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:311
 msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
-msgstr "Рядки <literal>«<FILE_NAME>»</literal> та <literal>«<FILE_NAME_WITH_EXT>»</literal> заповнюються тільки при створенні розділів для доданих файлів. Вони будуть замінені ім'ям файлу, що додається без вказівки відповідно до його розширення. Зверніть увагу, що вставляється лише базове ім'я та розширення файлу, а не його каталог або компоненти диска."
+msgstr "Рядки <literal>«&lt;FILE_NAME&gt;»</literal> та <literal>«&lt;FILE_NAME_WITH_EXT&gt;»</literal> заповнюються тільки при створенні розділів для доданих файлів. Вони будуть замінені ім'ям файлу, що додається без вказівки відповідно до його розширення. Зверніть увагу, що вставляється лише базове ім'я та розширення файлу, а не його каталог або компоненти диска."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:317
