--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: nl\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2024-10-25 16:40+0200\n"
-"PO-Revision-Date: 2016-01-14 08:27+0000\n"
+"PO-Revision-Date: 2024-11-14 19:53+0100\n"
 "Last-Translator: CamielK, 2022\n"
 "Language-Team: \n"
 "Language: nl\n"
@@ -9531,7 +9531,7 @@ msgstr "Normaal geselecteerde items in lijstweergave kunnen verplaatst worden me
 #: src/common/hacks.cpp:68
 #, no-c-format
 msgid "Normally spaces & tabs are removed from the beginning & the end of each line in text subtitles."
-msgstr "Normaal gesproken worden spaties en tabs aan het begin en einde van elke regel in tekstondertitels verwijderd.""
+msgstr "Normaal gesproken worden spaties en tabs aan het begin en einde van elke regel in tekstondertitels verwijderd."
 
 #: src/common/hacks.cpp:66
 #, no-c-format
@@ -13800,7 +13800,7 @@ msgstr "De spoor parameters komen niet overeen."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:443
 #, no-c-format
 msgid "The track properties on the \"input\" tab can be laid out in three different way in order to serve different workflows."
-msgstr "De trackeigenschappen op het tabblad \"Invoer"\ kunnen op drie verschillende manieren worden weergegeven, zodat ze geschikt zijn voor verschillende workflows."
+msgstr "De trackeigenschappen op het tabblad \"Invoer\" kunnen op drie verschillende manieren worden weergegeven, zodat ze geschikt zijn voor verschillende workflows."
 
 #: src/merge/output_control.cpp:1043
 #, no-c-format, c++-format
@@ -15231,7 +15231,7 @@ msgstr "Video: kleurbereik"
 #: src/common/property_element.cpp:175
 #, fuzzy, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Horizontale Cb-subsample
+msgstr "Horizontale Cb-subsample"
 
 #: src/common/property_element.cpp:177
 #, fuzzy, no-c-format
@@ -17266,7 +17266,7 @@ msgstr "– Zet naar niets –"
 #~ msgstr "Ctrl+A"
 
 #~ msgid "Ctrl+Alt+1"
-#~ msgstr "Ctrl+Alt+1
+#~ msgstr "Ctrl+Alt+1"
 
 #~ msgid "Ctrl+Alt+2"
 #~ msgstr "Ctrl+Alt+2"
