program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -15943,12 +15943,12 @@ msgstr "kodeke özgü"
 #: src/common/stereo_mode.cpp:59
 #, no-c-format
 msgid "column interleaved (left first)"
-msgstr "araya ekli sütun (önce sol)"
+msgstr "aralıklı sütun (önce sol)"
 
 #: src/common/stereo_mode.cpp:58
 #, no-c-format
 msgid "column interleaved (right first)"
-msgstr "araya ekli sütun (önce sağ)"
+msgstr "aralıklı sütun (önce sağ)"
 
 #: src/common/kax_info.cpp:789
 #, no-c-format
@@ -16108,12 +16108,12 @@ msgstr "inflateInit() başarısız. Sonuç: {0}\n"
 #: src/common/kax_info.cpp:750
 #, no-c-format
 msgid "interleaved; bottom field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "aralıklı; ilk önce alttaki alan görüntülenir; alanlar, en üstteki alanın en üst satırı ilk önce depolanacak şekilde depolama alanına serpiştirilir"
 
 #: src/common/kax_info.cpp:749
 #, no-c-format
 msgid "interleaved; top field displayed first; fields are interleaved in storage with the top line of the top field stored first"
-msgstr ""
+msgstr "aralıklı; ilk önce üstteki alan görüntülenir; alanlar, en üstteki alanın en üst satırı ilk önce depolanacak şekilde depolama alanına serpiştirilir"
 
 #: src/propedit/change.cpp:393
 #, no-c-format, c++-format
@@ -16650,12 +16650,12 @@ msgstr "kalan: bilinmiyor"
 #: src/common/stereo_mode.cpp:57
 #, no-c-format
 msgid "row interleaved (left first)"
-msgstr "araya ekli satır (önce sol)"
+msgstr "aralıklı satır (önce sol)"
 
 #: src/common/stereo_mode.cpp:56
 #, no-c-format
 msgid "row interleaved (right first)"
-msgstr "araya ekli satır (önce sağ)"
+msgstr "aralıklı satır (önce sağ)"
 
 #: src/common/kax_info.cpp:604
 #, no-c-format, c++-format
