man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -2623,10 +2623,8 @@ msgstr "<option>--attach-file</option> <parameter>nom_fitxer</parameter>, <optio
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1164
-#, fuzzy
-#| msgid "Creates a file attachment inside the &matroska; file. The <abbrev>MIME</abbrev> type must have been set before this option can used. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created.  If splitting is not used then both do the same."
 msgid "Creates a file attachment inside the &matroska; file. The difference between the two forms is that during splitting the files attached with <option>--attach-file</option> are attached to all output files while the ones attached with <option>--attach-file-once</option> are only attached to the first file created. If splitting is not used then both do the same."
-msgstr "Crea un fitxer adjunt dins del fitxer &matroska;. Abans que es pugui emprar aquesta opció, s'haurà d'establir el tipus <abbrev>MIME</abbrev>. La diferència entre les dues formes és que durant la divisió, els fitxers adjunts amb <option>--attach-file</option> seran adjuntats a tots els fitxers de sortida mentre que amb <option>--attach-file-once</option> només s'adjuntaran al primer fitxer creat. Si no s'empra la divisió, llavors les dues opcions faran el mateix."
+msgstr "Crea un fitxer adjunt dins del fitxer &matroska;. La diferència entre les dues formes és que durant la divisió, els fitxers adjunts amb <option>--attach-file</option> seran adjuntats a tots els fitxers de sortida mentre que amb <option>--attach-file-once</option> només s'adjuntaran al primer fitxer creat. Si no s'empra la divisió, llavors les dues opcions faran el mateix."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1170
