--- a/po/ca.po
+++ b/po/ca.po
@@ -4591,7 +4591,7 @@ msgstr "Provoca que el «mkvmerge» afegeixi ordres «stop display» als paquets
 #: src/common/hacks.cpp:72
 #, no-c-format
 msgid "Causes mkvmerge to use the codec IDs A_AC3/BSID9 & A_AC3/BSID10 instead of A_AC3 for AC-3 tracks with BSIDs of 9 or 10 like older versions of mkvmerge did."
-msgstr ""
+msgstr "Fa que el mkvmerge uzi els ID de còdec A_AC3/BSID9 i A_AC3/BSID10 en comptes d'A_AC3 per a pistes AC-3 amb els BSID de 9 o 10 com ho feien les versions anteriors del mkvmerge."
 
 #: src/common/hacks.cpp:42
 #, no-c-format
@@ -10320,7 +10320,7 @@ msgstr "Les possibles raons són: el fitxer no és un fitxer Matroska; el fitxer
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:205
 #, no-c-format
 msgid "PotPlayer bookmark files"
-msgstr ""
+msgstr "Fitxers d'adreces d'interès del PotPlayer"
 
 #: src/mkvtoolnix-gui/forms/main_window/select_character_set_dialog.h:151
 #, no-c-format
